<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/one" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_store" />
    </group>

    <group android:id="@+id/two" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_category" />
    </group>


    <item android:title="@string/group_my_store">
        <menu>
            <item
                android:id="@+id/nav_cart"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_cart" />
            <item
                android:id="@+id/nav_wishlist"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_wishlist" />
        </menu>

    </item>

    <item android:title="@string/group_services">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_login" />
        </menu>
    </item>
</menu>
