<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg" />

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/logomusic" />


                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="8dp">


                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:drawableLeft="@drawable/ic_login_user"
                            android:drawablePadding="10dp"
                            android:hint="@string/username_hint"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp" />

                        <ImageView
                            android:id="@+id/iv_username_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:padding="5dp"
                            android:src="@drawable/ic_login_cross" />


                    </RelativeLayout>

                    <View
                        android:id="@+id/view_username"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white" />

                    <com.healthcamp.healthapp.utils.SansProSemiBoldTextView
                        android:id="@+id/tv_username_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/login_failed"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <!--android:text="android@90"
                        android:text="androidapp"-->

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:drawableLeft="@drawable/ic_login_password"
                            android:drawablePadding="10dp"
                            android:hint="@string/password_hint"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp" />

                        <ImageView
                            android:id="@+id/iv_password_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:padding="5dp"
                            android:src="@drawable/ic_login_cross" />

                    </RelativeLayout>

                    <View
                        android:id="@+id/view_password"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white" />

                    <com.healthcamp.healthapp.utils.SansProSemiBoldTextView
                        android:id="@+id/tv_password_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/login_failed"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                    <com.healthcamp.healthapp.utils.SansProSemiBoldTextView
                        android:id="@+id/link_signup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|bottom"
                        android:layout_alignParentBottom="true"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="normal|bold"
                        android:text="Register" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">


                    <LinearLayout
                        android:id="@+id/ll_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="40dp"
                        android:background="@drawable/item_border_selected"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <com.healthcamp.healthapp.utils.SansProSemiBoldTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/btn_login"
                            android:textColor="#F6F6F6"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/app_theme_translucent"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/pb_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:interpolator="@anim/custom_progressbar"
                    android:src="@drawable/ic_login_loading" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pb_login"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="60dp"
                    android:text="@string/checking_login"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>
</FrameLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.healthcamp.healthapp.activity.LoginActivity">

    </android.support.constraint.ConstraintLayout>-->